Removed old components and creating new api